--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "jsx": "preserve",
     "strict": true,
+    "module": "ESNext",
     "paths": {
       "@/*": ["./src/*"],
       "@/assets/*": ["./assets/*"]
